# human-centered-ml

./: .gitignore  NOISE_ABLATION.md  README.md  arguments.py  data.py  demo.py  environment.yml  handlers.py  mypy.ini  nets.py  parameters.py  plots.ipynb  pyproject.toml  quick_test.py  typing_helpers.py  utils.py  wandb_utils.py
job_scripts/: install_env.job  run_demo.job  run_noise_ablation.job  run_noise_ablation_kcenter_cifar_0.2.job  run_noise_ablation_kcenter_cifar_0.4.job  run_noise_ablation_kcenter_cifar_0.6.job  run_noise_ablation_kcenter_cifar_0.8.job  run_noise_ablation_kcenter_mnist.job  setup_environment.job  setup_environment_uv.job  submit_all.sh  test_gpu.job  verify_job_logic.sh
query_strategies/: entropy_sampling.py  kcenter_greedy.py  random_sampling.py  strategy.py
results/: CIFAR10_EntropySampling_500_1000_40000_normal_res.txt  CIFAR10_EntropySampling_500_1000_40000_normal_res_tot.txt  CIFAR10_KCenterGreedy_250_1000_10000_normal_res.txt  CIFAR10_KCenterGreedy_250_1000_10000_normal_res_tot.txt  CIFAR10_KCenterGreedy_500_1000_40000_normal_res.txt  CIFAR10_KCenterGreedy_500_1000_40000_normal_res_tot.txt  CIFAR10_RandomSampling_500_1000_40000_normal_res.txt  CIFAR10_RandomSampling_500_1000_40000_normal_res_tot.txt  MNIST_EntropySampling_250_500_10000_normal_res.txt  MNIST_EntropySampling_250_500_10000_normal_res_tot.txt  MNIST_KCenterGreedy_250_500_10000_normal_res.txt  MNIST_KCenterGreedy_250_500_10000_normal_res_tot.txt  MNIST_RandomSampling_250_500_10000_normal_res.txt  MNIST_RandomSampling_250_500_10000_normal_res_tot.txt
wandb/: latest-run
(+23 files in other folders)
