[project]
name = "deepal-plus"
version = "0.1.0"
description = "Deep Active Learning Toolkit"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.21.2,<2.0",
    "scipy>=1.7.3,<2.0",
    "scikit-learn>=1.0.2,<2.0",
    "matplotlib>=3.5.1,<4.0",
    "pandas>=1.3.5,<3.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
    "pillow>=8.4.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "faiss-cpu>=1.7.2; sys_platform == 'darwin'",
    "faiss-gpu>=1.7.2; sys_platform == 'linux'",
    "openml>=0.12.2",
    "tensorboardx>=2.2",
    "spacy>=2.3.5",
    "thinc>=7.4.5",
    "requests>=2.27.0",
    "ipdb>=0.13.9",
    "opencv-python>=4.5.5",
    "wilds>=2.0.0",
    "toma>=1.1.0",
    "wandb>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]


[tool.uv.sources]
# If you need to pin specific versions or use git sources, add them here

